# fast-auth

./: pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.py  database.py  main.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
