[project]
name = "fast-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.4",
]
